--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@angular/platform-browser-dynamic": "~7.2.0",
         "@angular/router": "~7.2.0",
         "core-js": "^2.5.4",
+        "ngx-pagination": "^5.0.0",
         "rxjs": "~6.3.3",
         "sweetalert2": "^9.5.4",
         "tslib": "^1.9.0",
