--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
         "@angular/platform-browser": "~7.2.0",
         "@angular/platform-browser-dynamic": "~7.2.0",
         "@angular/router": "~7.2.0",
+        "chart.js": "^2.9.4",
+        "chartjs-plugin-datalabels": "^0.7.0",
         "core-js": "^2.5.4",
+        "ng2-charts": "^2.2.3",
         "ngx-pagination": "^5.0.0",
         "rxjs": "~6.3.3",
         "sweetalert2": "^9.5.4",
@@ -31,9 +34,9 @@
         "@angular/cli": "~7.3.9",
         "@angular/compiler-cli": "~7.2.0",
         "@angular/language-service": "~7.2.0",
-        "@types/node": "~8.9.4",
         "@types/jasmine": "~2.8.8",
         "@types/jasminewd2": "~2.0.3",
+        "@types/node": "~8.9.4",
         "codelyzer": "~4.5.0",
         "jasmine-core": "~2.99.1",
         "jasmine-spec-reporter": "~4.2.1",
