--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "private": true,
     "dependencies": {
         "@angular/animations": "~7.2.0",
+        "@angular/cli": "^7.0.7",
         "@angular/common": "~7.2.0",
         "@angular/compiler": "~7.2.0",
         "@angular/core": "~7.2.0",
@@ -31,8 +32,7 @@
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "~0.13.0",
-        "@angular/cli": "~7.3.9",
-        "@angular/compiler-cli": "~7.2.0",
+        "@angular/compiler-cli": "^7.2.0",
         "@angular/language-service": "~7.2.0",
         "@types/jasmine": "~2.8.8",
         "@types/jasminewd2": "~2.0.3",
@@ -48,6 +48,6 @@
         "protractor": "~5.4.0",
         "ts-node": "~7.0.0",
         "tslint": "~5.11.0",
-        "typescript": "~3.2.2"
+        "typescript": "^3.2.4"
     }
 }
