--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "core-js": "^2.5.4",
         "ng2-charts": "^2.2.3",
         "ngx-pagination": "^5.0.0",
-        "rxjs": "~6.3.3",
+        "rxjs": "^6.3.3",
         "sweetalert2": "^9.5.4",
         "tslib": "^1.9.0",
         "zone.js": "~0.8.26"
